<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BiodataActivity5">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="100dp"
        android:contentDescription="@string/image"
        android:background="@drawable/rey"/>

    <TextView
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:text="@string/nama_5"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:text="@string/nim_5"/>

    <Button
        android:id="@+id/btnBack5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:layout_marginTop="200dp"
        app:cornerRadius="15dp"
        android:text="@string/back"/>
</LinearLayout>