<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiodataActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- First Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image"
                android:background="@drawable/arya" />

            <TextView
                android:id="@+id/nama1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/nama_1" />

            <TextView
                android:id="@+id/nim1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/nim_1" />
        </LinearLayout>

        <!-- Second Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image"
                android:background="@drawable/rahman" />

            <TextView
                android:id="@+id/nama2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/nama_2" />

            <TextView
                android:id="@+id/nim2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/nim_2" />
        </LinearLayout>

        <!-- Third Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image"
                android:background="@drawable/ayu" />

            <TextView
                android:id="@+id/nama3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:text="@string/nama_3" />

            <TextView
                android:id="@+id/nim3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:text="@string/nim_3" />
        </LinearLayout>

        <!-- Fourth Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image"
                android:background="@drawable/maulinda" />

            <TextView
                android:id="@+id/nama4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:text="@string/nama_4" />

            <TextView
                android:id="@+id/nim4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:text="@string/nim_4" />
        </LinearLayout>

        <!-- Fifth Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image"
                android:background="@drawable/rey" />

            <TextView
                android:id="@+id/nama5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:text="@string/nama_5" />

            <TextView
                android:id="@+id/nim5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/blue"
                android:layout_marginHorizontal="50dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:text="@string/nim_5" />
        </LinearLayout>

        <!-- Back Button at the bottom -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:layout_marginTop="32dp"
            android:text="@string/back" />

    </LinearLayout>
</ScrollView>
