<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_gravity="center"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/image"
        android:background="@drawable/logoo" />

    <!-- FrameLayout to contain the login form -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:padding="16dp"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- TextView for the Login title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:background="@android:drawable/edit_text"
                android:autofillHints="username"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:background="@android:drawable/edit_text"
                android:autofillHints="password"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_marginTop="16dp"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/blue"/> <!-- Set the button color to blue -->
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
